--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #d6d6d6;
+    background-image:url(../images/imagen.png);
     font-family: helvetica;
     font-size: 11px;
     color: #484F4F;
 }
+url(../images/image.png);
 
-.liststylesquare {
     list-style-type: square;
    
 }
@@ -34,14 +34,14 @@ h2 {
 }
 
 .image {
-    width:20%;
+    width:30%;
     display:inline-block;
     vertical-align:top;
     box-sizing:border-box;
 }
 
 header .image img {
-    width:50%;
+    width:60%;
 }
 
 .colonne {
@@ -52,3 +52,15 @@ header .image img {
     box-sizing:border-box;
     
 }
+
+main {
+    background-image:url(../images/imagen2.png);
+}
+
+iframe {
+    display:inline-block;
+    vertical-align:top;
+    box-sizing:border-box; {
+    color: red;
+}
+
