--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 body {
     background-image:url(../images/imagen.png);
     font-family: helvetica;
-    font-size: 11px;
+    font-size: 12px;
     color: #484F4F;
 }
 url(../images/image.png);
@@ -60,7 +60,12 @@ main {
 iframe {
     display:inline-block;
     vertical-align:top;
-    box-sizing:border-box; {
-    color: red;
+    box-sizing:border-box; 
+    
 }
 
+
+footer{
+   
+}
+    
