--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,26 +1,29 @@
 body {
     background-image:url(../images/imagen.png);
-    font-family: helvetica;
+    font-family: helvetica, Arial, sans-serif;
     font-size: 12px;
     color: #484F4F;
 }
-url(../images/image.png);
-
-    list-style-type: square;
-   
-}
-
 
 h1 {
     background-color: #E2E2E0;
-    width: 15%;
-    text-align: center;
+    width: 40%;
+    text-align: left;
     color: #35B7B7;
-    text-decoration: underline;
     padding: 5px 0px 0px 0px;
-    
 }
 
+.image img {
+    width:30%;
+    display:inline-block;
+    vertical-align:top;
+}
+
+
+.conteneur{
+    border-color:red;
+    border-width
+}
 h2 {
     color: #35B7B7;
     text-decoration: underline
@@ -33,24 +36,12 @@ h2 {
     margin: 15px;
 }
 
-.image {
-    width:30%;
-    display:inline-block;
-    vertical-align:top;
-    box-sizing:border-box;
-}
-
-header .image img {
-    width:60%;
-}
-
 .colonne {
     width:30%;
     padding: 10px;
     display:inline-block;
     vertical-align:top;
     box-sizing:border-box;
-    
 }
 
 main {
@@ -58,14 +49,18 @@ main {
 }
 
 iframe {
-    display:inline-block;
+    display:inline-table;
     vertical-align:top;
     box-sizing:border-box; 
-    
 }
 
 
-footer{
-   
+footer p{
+    width:10%;
+    margin-left:30px;
+    display:inline-table;
 }
-    
+
+.yo {
+    font-size: 18px;
+}
